<resources>
    <string name="app_name">Digipost</string>
    <string name="archive">Arkivet</string>
    <string name="workarea">Kjøkkenbenken</string>
    <string name="mailbox">Postkassen</string>
    <string name="receipts">Kvitteringer</string>
    <string name="screenlock_message1">For at Digipost-appen skal huske din innlogging må du skru på
        skjermlås på din mobil.
    </string>
    <string name="screenlock_message2">Uten skjermlås må du logge inn med fødselsnummer og passord
        hver gang du åpner appen.
    </string>
    <string name="yes_apply_screenlock">Skru på skjermlås</string>
    <string name="no_dont_use_screenlock">Avbryt</string>
    <string name="screenlock">Skjermlås</string>
    <string name="close">Lukk</string>
    <string name="abort">Avbryt</string>
    <string name="loading_content">Laster innhold...</string>
    <string name="search">Søk</string>
    <string name="yes">Ja</string>
    <string name="delete">Slett</string>
    <string name="move">Flytt</string>
    <string name="open">Åpne</string>
    <string name="back">Tilbake</string>
    <string name="preview">Forhåndsvis</string>
    <string name="no">Nei</string>
    <string name="please_wait">Vennligst vent...</string>
    <string name="attachment">Vedlegg</string>
    <string name="search_mailbox">Søk i postkassen</string>
    <string name="search_workarea">Søk i kjøkkenbenken</string>
    <string name="search_archive">Søk i arkivet</string>
    <string name="search_receipts">Søk i kvitteringer</string>
    <string name="search_in">Søk i\u0020</string>
    <string name="letter">\u0020brev\u0020</string>
    <string name="document">\u0020dokument\u0020</string>
    <string name="documents">\u0020dokumenter\u0020</string>
    <string name="receipt">\u0020kvittering?</string>
    <string name="receiptss">\u0020kvitteringer?</string>
    <string name="copy">Kopier tekst</string>
    <string name="save">Lagre til telefonen</string>
    <string name="open_external">Åpne i en annen app</string>
    <string name="saving">Lagrer...</string>
    <string name="move_checkbox_description">Avhukingsboks for å velge flere listeelementer til mengdeoperasjon som flytt og slett</string>
    <string name="warning_sign_description">Bilde av en varselstrekant</string>
    <string name="file_sign_description">Bilde av et fil-ikon</string>
    <string name="title_activity_login_view">LoginView</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_html_veb_view">HtmlWebView</string>
    <string name="title_activity_web_fragment">WebFragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="emptyview_mailbox">Ingen brev i\u0020</string>
    <string name="emptyview_archive">Ingen dokumenter i\u0020</string>
    <string name="emptyview_workarea">Ingen dokumenter på\u0020</string>
    <string name="emptyview_receipt_intro_title">Kom i gang med elektroniske kvitteringer</string>
    <string name="emptyview_receipt_intro_message">Med Digipost har du tilgang til dine kvitteringer der du er. Se kvitteringer på mobilen, nettbrett eller på din datamaskin. Tjenesten er gratis å bruke.</string>
    <string name="emptyview_receipt_verification_title">Verifisering</string>
    <string name="emptyview_receipt_verification_message">For å se kvitteringer må du verifisere at de kommer fra ditt bankkort. Du verifiserer kortet ved å taste inn kjøpesummen fra et kjøp som er gjort i en butikk som støtter elektroniske kvitteringer.</string>
    <string name="emptyview_receipt_registrated_title">Registert</string>
    <string name="emptyview_receipt_registrated_message">Neste steg er å betale med kort i en butikk som støtter elektroniske kvitteringer. Ta vare på kvitteringen fra dette kjøpet. Du kan bruke kvitteringen til å verifisere bankkortet. Du trenger kun å verifisere kortet én gang.
    </string>
    <string name="receipt_toptext_register_cards">For å motta elektroniske kvitteringer må du legge til et bankkort</string>
    <string name="receipt_toptext_one_hidden_receipt">En kvittering er skjult. For å se denne må du verifisere ditt bankkort</string>
    <string name="receipt_toptext_multiple_hidden_receipts_start">Du har\u0020</string>
    <string name="receipt_toptext_multiple_hidden_receipts_end">\u0020skjulte kvitteringer. For å se disse må du verifisere ditt bankkort</string>
    <string name="out_of_memory_exception">Det er ikke nok ledig minne til å åpne filen</string>
    <string name="base_optionsbutton_contentDescription">Options button</string>
    <string name="base_logobutton_contentDescription">Digipost logo"</string>
    <string name="base_refreshbutton_contentDescription">Refresh button"</string>
    <string name="login_loginbutton_text">Logg inn</string>
    <string name="login_registrationbutton_text">Ny bruker</string>
    <string name="login_privacybutton_text">Personvern</string>
    <string name="login_header_logo_contentdescription">Digipost logo</string>
    <string name="login_remember_me">Husk meg</string>
    <string name="optionsmenu_settings">Innstillinger</string>
    <string name="optionsmenu_logout">Logg ut</string>
    <string name="optionsmenu_help">Hjelp</string>
    <string name="optionsmenu_moveToArchive">Flytt til arkivet</string>
    <string name="optionsmenu_moveToWorkarea">Flytt til kjøkkenbenken</string>
    <string name="optionsmenu_deleteselected">Slett</string>
    <string name="optionsmenu_screenlockchoice">Slett skjermlås preferanse</string>
    <string name="context_letterlist_show">Vis brev</string>
    <string name="context_letterlist_delete">Slett brev</string>
    <string name="context_letterlist_abort">Avbryt</string>
    <string name="context_letterlist_move">Flytt til arkiv</string>
    <string name="context_move_to_archive">Flytt til arkivet</string>
    <string name="context_move_to_workarea">Flytt til kjøkkenbenken</string>
    <string name="context_refresh_content">Oppdater innhold</string>
    <string name="context_refresh">Oppdater</string>
    <string name="context_folder">Flytt til mappe</string>
    <string name="context_move">Flytt</string>
    <string name="context_move_to">Flytt til</string>
    <string name="pdf_no_further_occurences_found">Ingen flere treff funnet.</string>
    <string name="pdf_text_not_found">Fant ingen treff.</string>
    <string name="pdf_open_failed">Kunne ikke åpne dokumentet.</string>
    <string name="pdf_searching_">Søker…</string>
    <string name="pdf_search_document">Søk i dokumentet</string>
    <string name="pdf_promt_save_to_sd">Ønsker du å lagre dokumentet?</string>
    <string name="pdf_saved_to_sd">Dokumentet er lagret i nedlastingsområde.</string>
    <string name="pdf_save_to_sd_failed">En feil oppstod under lagringen.</string>
    <string name="pdf_select_copied">Markert tekst kopiert.</string>
    <string name="pdf_select_no_text_selected">Ingen tekst markert.</string>
    <string name="upload">Last opp</string>
    <string name="uploading">Laster opp\u0020</string>
    <string name="upload_dialog">Er du sikker på at du vil laste opp\u0020</string>
    <string name="upload_multiple_dialog">Er du sikker på at du vil laste opp valgte filer?</string>
    <string name="upload_folder_exception">Mapper kan ikke lastes opp</string>
    <string name="upload_file_type_not_allowed_start">Denne filtypen (.</string>
    <string name="upload_file_type_not_allowed_end">) kan ikke lastes opp i Digipost.</string>
    <string name="upload_space_used">% lagringsplass brukt</string>
    <string name="upload_files_uploaded">\u0020filer ble lastet opp til arkivet.</string>
    <string name="upload_complete">Opplastning fullført.</string>
    <string name="no_files">Ingen filer</string>
    <string name="image_open_failed">Kunne ikke åpne bildet.</string>
    <string name="unsupported_title">Ustøttet filtype</string>
    <string name="unsupported_message_top">Digipost-appen kan ikke vise denne filtypen</string>
    <string name="unsupported_message_bottom">Du kan åpne dokumentet dersom du har en app på din
        telefon hvor denne filtypen kan vises.
    </string>
    <string name="preferences">Innstillinger</string>
    <string name="pref_default_screen_title">Startskjerm ved innlogging</string>
    <string name="pref_default_screen_default">1</string>
    <string name="pref_general_settings">Generelle innstillinger</string>
    <string name="pref_documents_settings">Innstillinger for brev</string>
    <string name="pref_show_bank_id_documents_title">BankID &amp; Buypass</string>
    <string name="pref_show_bank_id_documents_summary">Vis brev som krever innlogging med BankID eller Buypass</string>
    <string name="pref_screen_rotation_title">Skjermrotasjon</string>
    <string name="pref_screen_rotation_summary">Tillat skjermrotasjon</string>
    <string name="pref_screen_confirm_delete_title">Bekreft før sletting</string>
    <string name="pref_screen_confirm_delete_summary">Vis bekreftelsesdialog før sletting</string>
    <string name="pref_screen_confirm_move_title">Bekreft før flytting</string>
    <string name="pref_screen_confirm_move_summary">Vis bekreftelsesdialog før flytting</string>
    <string name="pref_screen_personal_settings_title">Personlige innstillinger</string>
    <string name="pref_screen_personal_settings_summary">Endre dine personlige innstillinger i Digipost</string>
    <string name="pref_screen_notification_settings_title">Varslingsinnstillinger</string>
    <string name="pref_screen_notification_settings_summary">Endre dine varslingsinnstillinger i Digipost</string>
    <string name="pref_screen_digipost_account_settings">Din konto</string>
    <string name="pref_notification_settings_letters_title">Varsling om nye brev</string>
    <string name="pref_notification_settings_letters_new_title">E-post om nye brev</string>
    <string name="pref_notification_settings_letters_new_subtitle">Send meg en e-post hvis jeg får et nytt brev</string>
    <string name="pref_notification_settings_letters_unread_title">Ukentlig e-post om uleste brev</string>
    <string name="pref_notification_settings_letters_unread_subtitle">Send meg en e-post hver uke hvis jeg har uleste brev.</string>
    <string name="pref_notification_settings_letters_important_title">SMS om ekstra viktige brev</string>
    <string name="pref_notification_settings_letters_important_subtitle">Tillat avsendere å sende meg en SMS-melding om viktige brev.</string>
    <string name="pref_notification_settings_contact_info_title">Kontaktinformasjon</string>
    <string name="pref_notification_settings_contact_info_phone_title">Ditt mobilnummer</string>
    <string name="pref_notification_settings_contact_info_phone_hint">Mobilnummer</string>
    <string name="pref_notification_settings_contact_info_email_title">Dine e-postadresser</string>
    <string name="pref_notification_settings_contact_info_email_hint">E-postadresse</string>
    <string name="pref_notification_settings_button">Lagre varslingsinnstillinger</string>
    <string name="pref_personal_settings_info_title">Personlig informasjon</string>
    <string name="pref_personal_settings_info_personalidentificationnumber">Fødselsnummer</string>
    <string name="pref_personal_settings_info_full_name">Navn</string>
    <string name="pref_personal_settings_info_address">Adresse</string>
    <string name="pref_personal_settings_info_phonenumber">Telefon</string>
    <string name="pref_personal_settings_info_email">E-post</string>
    <string name="pref_personal_settings_info_digipost_address">Digipostadresse</string>
    <string name="pref_personal_settings_info_usage_title">Bruk av personlig informasjon</string>
    <string name="pref_personal_settings_info_usage_accepts_info_title">Hold meg oppdatert</string>
    <string name="pref_personal_settings_info_usage_subtitle">Posten lanserer jevnlig nye produkter og tjenester og kan sende deg informasjon om dette.</string>
</resources>