<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/pdfmenu_search"
            android:title="@string/search"
            android:icon="@drawable/white_search_48"
            android:showAsAction="collapseActionView|ifRoom"
            android:actionViewClass="android.widget.SearchView"/>


    <item
            android:id="@+id/pdfmenu_delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_action_delete"
            android:showAsAction="never"/>

    <item
            android:id="@+id/pdfmenu_workarea"
            android:title="@string/context_move_to_workarea"
            android:showAsAction="never"/>
    <item
            android:id="@+id/pdfmenu_archive"
            android:title="@string/context_move_to_archive"
            android:showAsAction="never"/>

    <item
            android:id="@+id/pdfmenu_copy"
            android:showAsAction="never"
            android:title="@string/copy">
    </item>
    <item
            android:id="@+id/pdfmenu_open_external"
            android:showAsAction="never"
            android:title="@string/open_external">
    </item>
    <item
            android:id="@+id/pdfmenu_save"
            android:showAsAction="never"
            android:title="@string/save">
    </item>

</menu>