<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_image_html_unsupported_delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_action_delete"
            android:showAsAction="never"/>

    <item
            android:id="@+id/menu_image_html_unsupported_workarea"
            android:title="@string/context_move_to_workarea"
            android:showAsAction="never"/>
    <item
            android:id="@+id/menu_image_html_unsupported_archive"
            android:title="@string/context_move_to_archive"
            android:showAsAction="never"/>

    <item
            android:id="@+id/menu_image_html_unsupported_open_external"
            android:showAsAction="never"
            android:title="@string/open_external">
    </item>
    <item
            android:id="@+id/menu_image_html_unsupported_save"
            android:showAsAction="never"
            android:title="@string/save">
    </item>

</menu>