<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/basemenu_mailbox"
        android:icon="@drawable/white_message_48"
        android:showAsAction="never"
        android:title="@string/mailbox">
    </item>
    <item
        android:id="@+id/basemenu_workarea"
        android:icon="@drawable/white_folder_48"
        android:showAsAction="never"
        android:title="@string/workarea">
    </item>
    <item
        android:id="@+id/basemenu_archive"
        android:icon="@drawable/white_folder_48"
        android:showAsAction="never"
        android:title="@string/archive">
    </item>
    <item
        android:id="@+id/basemenu_receipts"
        android:icon="@drawable/white_receipts_48"
        android:showAsAction="never"
        android:title="@string/receipts">
    </item>
    <item
        android:id="@+id/basemenu_logoutOption"
        android:icon="@drawable/white_power_48"
        android:showAsAction="never"
        android:title="@string/optionsmenu_logout">
    </item>

</menu>