<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/letterlist_menu_showLetter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/context_letterlist_show"/>
    <item
        android:id="@+id/letterlist_menu_Delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/context_letterlist_delete"/>
    <item
        android:id="@+id/letterlist_menu_Abort"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/context_letterlist_abort"/>
    <item
        android:id="@+id/letterlist_menu_Move"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/context_letterlist_move"/>
</menu>