<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/main_context_menu_folder"
          android:title="@string/base_refreshbutton_contentDescription"
          android:icon="@drawable/folder_close"
          android:showAsAction="ifRoom" >

        <menu>
            <item
                    android:id="@+id/main_context_menu_workarea"
                    android:title="@string/workarea" />
            <item
                    android:id="@+id/main_context_menu_archive"
                    android:title="@string/archive" />
        </menu>
    </item>


    <item android:id="@+id/main_context_menu_delete"
          android:title="@string/base_refreshbutton_contentDescription"
          android:icon="@drawable/remove"
          android:showAsAction="ifRoom" />

</menu>