<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/screenlock_header_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:paddingLeft="20dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_notification_settings_letters_title"
                        android:textSize="17sp"
                        android:id="@+id/textView"
                        android:textColor="@color/white"
                        android:layout_gravity="top"
                        android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                <CheckBox
                        android:id="@+id/notification_settings_new_letters"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/pref_notification_settings_letters_new_title"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/pref_notification_settings_letters_new_subtitle"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                <CheckBox
                        android:id="@+id/notification_settings_unread_letters"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/pref_notification_settings_letters_unread_title"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/pref_notification_settings_letters_unread_subtitle"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                <CheckBox
                        android:id="@+id/notification_settings_important_letters"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/pref_notification_settings_letters_important_title"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/pref_notification_settings_letters_important_subtitle"/>

            </LinearLayout>


            <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/screenlock_header_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:paddingLeft="20dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_notification_settings_contact_info_title"
                        android:textSize="17sp"
                        android:id="@+id/textView"
                        android:textColor="@color/white"
                        android:layout_gravity="top"
                        android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="10sp">

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/pref_notification_settings_contact_info_phone_title"
                        android:textSize="16sp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"/>

                <EditText
                        android:id="@+id/notification_settings_mobile"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/pref_notification_settings_contact_info_phone_hint"
                        android:inputType="phone"/>

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/pref_notification_settings_contact_info_email_title"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"/>


                <EditText
                        android:id="@+id/notification_settings_email1"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/pref_notification_settings_contact_info_email_hint"
                        android:inputType="textEmailAddress"/>

                <EditText
                        android:id="@+id/notification_settings_email2"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/pref_notification_settings_contact_info_email_hint"
                        android:inputType="textEmailAddress"/>

                <EditText
                        android:id="@+id/notification_settings_email3"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/pref_notification_settings_contact_info_email_hint"
                        android:inputType="textEmailAddress"/>

            </LinearLayout>

            <Button

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/red_button_style"
                    android:text="@string/pref_notification_settings_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/notification_settings_save"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>