<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:weightSum="6"
              android:background="@color/login_background"
              android:layout_height="match_parent"
              android:padding="5dp"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Skjermlås"
            android:textSize="40dp"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|top"/>

    <LinearLayout
            android:id="@+id/screenlockactivity_yeslayout"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/screenlock_message1"
                android:gravity="center"
                android:textSize="15dp"/>
        <Button

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/yes_apply_screenlock"
                android:id="@+id/screenlockactivity_yes_button"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/screenlock_message2"
                android:gravity="center"
                android:textSize="15dp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="40dp"
                android:text="@string/no_dont_use_screenlock"
                android:id="@+id/screenlockactivity_no_button"
                android:layout_gravity="center"/>



    </LinearLayout>


</LinearLayout>