<!--
/**
 * Copyright (C) Posten Norge AS
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom_bar_background"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/login_content_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_disclaimer_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="52dp"
        android:background="@color/bottom_bar_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20sp" >

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="136dp"
            android:layout_height="0dip"
            android:layout_weight="0.30"
            android:contentDescription="@string/login_header_logo_contentdescription"
            android:src="@drawable/postbox_white_medium" />

        <Button
            android:id="@+id/login_loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_loginbutton_style"
            android:drawableBottom="#aa0000"
            android:drawableLeft="@drawable/lock_white_35"
            android:drawablePadding="2dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/login_loginbutton_text"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_disclaimer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#292b2d"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login_registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_otherbuttons_style"
            android:padding="10dp"
            android:text="@string/login_registrationbutton_text"
            android:textColor="#8c8c8c"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/login_privacyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_otherbuttons_style"
            android:padding="10dp"
            android:text="@string/login_privacybutton_text"
            android:textColor="#8c8c8c"
            android:textSize="14sp"
             />
    </LinearLayout>

</RelativeLayout>